Custom Annotation AOP for Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,9 @@
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>custom-annotation-aop</module>
+    </modules>
+
 
 </project>
